--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.81.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.54.0",
+    "sass-loader": "^13.0.0"
   }
 }
